- アップデートチェックの非同期処理をHttpClientからHttpURLConnectionに変更 - タイムアウト設定およびエラーハンドリングを改善 - HTTPレスポンス処理のヘルパーメソッドを追加 - Folia対応でOPへの通知ロジックを修正